{
    "name": "PointClickInput",
    "maps": [
        {
            "name": "GameInput",
            "id": "d4179cf5-cdfa-4c93-b1d3-4ac93661d2bf",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "23960ad4-2191-464f-8cb3-16f9aad912ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "30a82f92-ec4f-407b-910d-d95f3699793f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMove",
                    "type": "PassThrough",
                    "id": "b76b9886-e727-4282-b45b-78ea95e9627a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "39b419a1-d5b9-48bb-a750-6a1a36387a0d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKey",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6db5848-103d-4b66-a5a0-4eee6e7eb1c0",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseKey",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53c94d36-b8a1-4b7c-88da-204ad1a45a5b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MouseKey",
            "bindingGroup": "MouseKey",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}